# nlp

anymalign2.5/: minimalign.py
easyfirst/: .README.swp  .common.py.swp  .easyfirst.py.swp  deps.py  easyfirst.py  parse.py
easyfirst/ml/: .ml.pyx.swp  makefile
easyfirst/pio/: .io.py.swp  io.py
eigen-eigen-74756ee995af/: .hg_archival.txt
extractors/: col-extract.py  nlt-extract.py  nwt-extract.py  web-extract.py
giza-pp-smoothed-l0/: .main.cpp.swp  GIZA++  README  TTables.cpp  TTables.h  defs.h  file_spec.h  hmm.cpp  main.cpp  model1.cpp  model2.cpp  model3.cpp  mystl.h.macosx  plain2snt.out  projectedGradientDescent.h  snt2cooc.out  snt2plain.out
giza-pp-smoothed-l0/snt2cooc.out.dSYM/Contents/Resources/DWARF/: snt2cooc.out
jdepp/: COPYING  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
jdepp/src/: Makefile.am  Makefile.in  cedar.h  pdep.cc  pdep.h
jdepp/swig/: Makefile  README  jdepp.i
jdepp/swig/lua/: Makefile  test.lua
jdepp/swig/perl/: Makefile.PL  test.pl
jdepp/swig/python/: setup.py  test.py
jdepp/swig/ruby/: extconf.rb  test.rb
jdepp/tools/: Makefile.am  Makefile.in  conll2kyoto.py  knbc2kyoto.py  replace_pos.py  to_chunk.py  to_chunk_.py  to_tree.py  to_tree_.py
mwetoolkit/: Makefile  README  VERSIONS
mwetoolkit/aux-docs/: license-gnu-gpl-v3.txt
mwetoolkit/include/: base.h  basefuns.h  main.h  rbtree.h  readline.h  suffixarray.h  symboltable.h
mwetoolkit/meta/: metainfo.py
mwetoolkit/src/indexer/: basefuns.c  main.c  rbtree.c  readline.c  suffixarray.c  symboltable.c
mwetoolkit/test/: cmpReferences.sh  testlib.sh
mwetoolkit/test/annotate_mwe/: testAll.sh
mwetoolkit/test/annotate_mwe/local-input/ContiguousLemma/: candidates.xml  corpus.xml
mwetoolkit/test/annotate_mwe/local-input/Source/: candidates.xml  corpus.xml
mwetoolkit/test/annotate_mwe/reference-output/: ContigLemma.txt  FromSource.txt  Gapped3ContigLemma.txt
mwetoolkit/test/candidates/: testAll.sh
mwetoolkit/test/candidates/local-input/NounCompound/: corpus.xml  patterns.xml
mwetoolkit/test/candidates/reference-output/NounCompound/: all-candidates.txt  longest-candidates.txt  longest-nonoverlap-candidates.txt  shortest-candidates.txt  shortest-nonoverlap-candidates.txt
mwetoolkit/test/candidates/reference-output/VerbParticle/: all-candidates.txt  longest-candidates.txt  longest-nonoverlap-candidates.txt  shortest-candidates.txt  shortest-nonoverlap-candidates.txt
mwetoolkit/test/convert/: testAll.sh
mwetoolkit/test/convert/future-work/: IgnoredFields.conll
mwetoolkit/test/convert/local-input/: candidates.PlainCandidates  candidates.xml  candidates2.xml  corpus.TaggedPlainCorpus  corpus.conll  corpus.moses  corpus.treetagger  patterns.xml  patterns_deprecated.xml  patterns_deprecated2.xml
mwetoolkit/test/convert/local-input/uncompress/: corpus.bz2
mwetoolkit/test/convert/reference-output/: candidates.PlainCandidates.xml  candidates.xml.arff  candidates.xml.csv  candidates.xml.xml  corpus.PlainCorpus.xml  corpus.TaggedPlainCorpus.xml  corpus.conll.xml  corpus.moses.xml  corpus.pwac  corpus.pwac.xml  corpus.treetagger.xml  corpus.xml.html  corpus.xml.xml  patterns.xml.xml  patterns_deprecated.xml.xml  patterns_deprecated2.xml.xml
mwetoolkit/test/filetype-samples/: candidates.ucs  candidates.xml  corpus.PlainCorpus  corpus.TaggedPlainCorpus  corpus.palavras  corpus.pwac  corpus.treetagger  corpus.xml  dict.xml  patterns.xml
mwetoolkit/test/filetype-samples/corpus.BinaryIndex/: corpus.info  corpus.lemma.corpus  corpus.lemma.suffix  corpus.lemma.symbols  corpus.pos.corpus  corpus.pos.suffix  corpus.pos.symbols  corpus.surface.corpus  corpus.surface.suffix  corpus.surface.symbols  corpus.syn.corpus  corpus.syn.suffix  corpus.syn.symbols
mwetoolkit/test/filetype-samples/output-only/: candidates.arff  candidates.csv  corpus.html
mwetoolkit/test/inputs/: ted500.xml
mwetoolkit/test/lang/english/: testAll.sh
mwetoolkit/test/lang/greek/: testAll.sh
mwetoolkit/test/measure/: testAll.sh
mwetoolkit/test/measure/local-input/: prediction.xml  reference.xml
mwetoolkit/test/measure/reference-output/: ExactMatch.txt  LinkBased.txt
mwetoolkit/test/transform/: testAll.sh
mwetoolkit/test/transform/reference-output/: Bracket.PlainCorpus  SurfaceSlashPOS.PlainCorpus
mwetoolkit/toy/: pat_nn.xml  pat_open.xml  run-tutorial.sh
opal/: COPYING  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
opal/src/: Makefile.am  Makefile.in  TODO  opal.cc  pa.h  rand_shuf.cc  timer.cc
opal/swig/: Makefile  README  opal.i
opal/swig/lua/: Makefile  test.lua
opal/swig/perl/: Makefile.PL  test.pl
opal/swig/python/: setup.py  test.py
opal/swig/ruby/: extconf.rb  test.rb
opal/test/: README  wiki.dev  wiki.test
pecco/: COPYING  Makefile.am  Makefile.in  README  THANKS  config.h.in  configure  configure.ac
pecco/src/: Makefile.am  Makefile.in  classify.cc  classify.h  kernel.cc  kernel.h  linear.cc  linear.h  pecco.cc  typedef.h
pecco/swig/: Makefile  README  pecco.i
pecco/swig/lua/: Makefile  test.lua
pecco/swig/perl/: Makefile.PL  test.pl
pecco/swig/python/: setup.py  test.py
pecco/swig/ruby/: extconf.rb  test.rb
pecco/test/: Makefile  README  linear_m1  linear_m2
pecco/tools/: Makefile  Makefile.am  Makefile.in  to_pecco.py
projectivize/: README  eisner.py  projectivize.py  yutils.py
utils/: #pids#  bijoin.py  bisample.py  bisize-old.py  bisize.py  bisplit.py  biswap.py  bpar  cpprdiff  data.py  dedupe.py  detag.py  detaint.py  extend_vcb.py  forests.sh  glog  gtrans.py  han2zen2.pl  it_accents.py  ja-detokenize.py  ja-filter.py  ja-sentences.sh  ja-skipfrag.py  ja.sed  jdc.py  knp.sh  leaves  linesize.py  lowalert  merge-split.py  mfm-tokens  minimalign.py  mksnt.py  mksnt2.py  mono-merge.py  normalize.py  nowide.py  np  ord.py  pennconverter  (+25 more)
zpar-0.7/: input  tags
zpar-expt/: analysis.py  analysis.sh  conll2zpar.sh  genSent.py  genTag.py  gencode.sh  label_old.h  pos_old.h  projectivize.sh  rules.h  split.py  summary.sh  tags.h  test.sh  test_dev.sh  train.sh
(+168 files in other folders)
